Format all doto-backend files
